gcc/testsuite/rust/rustc/ui/typeck/cyclic_type_ice.rs
fn thing() {
    let f = |_, _| ();
    f(f); // { dg-error ".E0057." "" { target *-*-* } }
// { dg-error ".E0057." "" { target *-*-* } .-1 }
}

fn main() {}

